--- a/main.html
+++ b/main.html
@@ -1,11 +1,9 @@
 <DOC TYPE! html>
 <html>
 	<head>
-		<Title>
-			kiki
-		</Title>
+	<Title>kiki</Title>
 		</Body>
-		<h1> 
+		<h1></h1>
 		</Body>
 
 <style>
