--- a/main.html
+++ b/main.html
@@ -1,30 +1,36 @@
-<DOC TYPE! html>
-<html>
-	<head>
-	<Title>kiki</Title>
-		</Body>
-		<h1></h1>
-		</Body>
-
-<style>
-	body {
-	background-color: black;
-	}
-    #content {
-        position: relative;
-    }
-    #content img {
-        position: absolute;
-        top: 0px;
-        right: 0px;
-		left: 1px;
-    }
-</style>
-
-<div id="content">
-    <img src="C:\Users\licasas\Desktop\kiki\blkgrnresize.png" class="ribbon" alt="" />
-    
-</div>
-	</head>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>kiki | music you ♥</title>
+	<!--css file-->
+	<link rel="stylesheet" href="style.css">
+	
+</head>
+				
+<body>
+	
+		<div class="container">
+        <nav class="side-navigation">
+		
+		<!--Logo top right-->
+            <div class="logo"><center><img src="blkgrnresize2.png" class="ribbon" alt="" /></center></div>
+			<!--links-->
+            <ul>
+                <li><center><a href="#"><center>Home</a></center></li>
+                <li><center><a href="#"><center>Search</a></center></li>
+                <li><center><a href="#"><center>Library</a></center></li>
+                <li><center><a href="#"><center>Profile</a></center></li>
+				<li><center><a href="#"><center>About us</a></center></li>
+            </ul>
+        </nav>
+        <main>
+            <!-- Your main content goes here -->
+			<div class="search-bar">
+			<input type="text" placeholder="Search...">
+			<button>Search</button>
+        </main>
+    </div>
+</body>
 </html>
