--- a/main.html
+++ b/main.html
@@ -18,11 +18,11 @@
             <div class="logo"><center><img src="blkgrnresize2.png" class="ribbon" alt="" /></center></div>
 			<!--links-->
             <ul>
-                <li><center><a href="#"><center>Home</a></center></li>
-                <li><center><a href="#"><center>Search</a></center></li>
-                <li><center><a href="#"><center>Library</a></center></li>
-                <li><center><a href="#"><center>Profile</a></center></li>
-				<li><center><a href="#"><center>About us</a></center></li>
+                <li><center><a href="main.html"><center>Home</a></center></li>
+                <li><center><a href="Search.html"><center>Search</a></center></li>
+                <li><center><a href="Library.html"><center>Library</a></center></li>
+                <li><center><a href="Profile.html"><center>Profile</a></center></li>
+		<li><center><a href="About.html"><center>About us</a></center></li>
             </ul>
         </nav>
         <main>
