--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
                 <li><center><a href="Search.html"><center>Search</a></center></li>
                 <li><center><a href="Library.html"><center>Library</a></center></li>
                 <li><center><a href="Profile.html"><center>Profile</a></center></li>
-		<li><center><a href="About.html"><center>About us</a></center></li>
+				<li><center><a href="About.html"><center>About us</a></center></li>
             </ul>
         </nav>
         <main>
@@ -43,7 +43,7 @@
         <img src="thumbnail/sin_ti.png" alt="bad bunny - party">
         <div class="playButton" id="playButton1">
 		<img src="thumbnail/play.png" alt="Play"></div>
-        <div class="songInfo">Bad Bunny - Party</div>
+        <div style="color:white" class="songInfo">Bad Bunny - Party</div>
     </div>
 <!-- 2nd song and thumbnaill-->
 	<div class="thumbnail" 
@@ -56,7 +56,7 @@
         <img src="thumbnail/Her_Loss.png" alt="Drake - In My Feelings">
         <div class="playButton" id="playButton2">
 		<img src="thumbnail/play.png" alt="Play"></div>
-        <div class="songInfo">Drake - In My Feelings</div>
+        <div style="color:white" class="songInfo">Drake - In My Feelings</div>
     </div>
 <!-- 3rd song and thumbnaill-->	
  	<div class="thumbnail" 
@@ -69,7 +69,7 @@
         <img src="thumbnail/Sandstorm_single.jpg" alt="Darude - Sandstorm">
         <div class="playButton" id="playButton3">
 		<img src="thumbnail/play.png" alt="Play"></div>
-        <div class="songInfo">Darude - Sandstorm</div>
+        <div style="color:white" class="songInfo">Darude - Sandstorm</div>
     </div>
 <!-- 4th song and thumbnaill-->	
  	<div class="thumbnail" 
@@ -82,7 +82,7 @@
         <img src="thumbnail/Nirvana.png" alt="Nirvana - Smells Like Teen Spirit">
         <div class="playButton" id="playButton4">
 		<img src="thumbnail/play.png" alt="Play"></div>
-        <div class="songInfo">Nirvana - Smells Like Teen Spirit</div>
+        <div style="color:white" class="songInfo">Nirvana - Smells Like Teen Spirit</div>
     </div>
  <!-- 5th song and thumbnaill-->	
  	<div class="thumbnail" 
@@ -95,7 +95,7 @@
         <img src="thumbnail/deadmau5.png" alt="Deadmau5 - Strobe (Radio Edit)">
         <div class="playButton" id="playButton5">
 		<img src="thumbnail/play.png" alt="Play"></div>
-        <div class="songInfo">Deadmau5 - Strobe (Radio Edit)</div>
+        <div style="color:white" class="songInfo">Deadmau5 - Strobe (Radio Edit)</div>
     </div>
  
 
