--- a/main.html
+++ b/main.html
@@ -9,107 +9,164 @@
 	
 </head>
 				
+<script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <body>
-	
-		<div class="container">
-        <nav class="side-navigation">
-		
-		<!--Logo top right-->
-            <div class="logo"><center><img src="blkgrnresize2.png" class="ribbon" alt="" /></center></div>
-			<!--links-->
+    <!--Side Bar-->
+    <div class= "sidebar">
+        <div class = "logo"> <!--kiki Logo-->
+            <a href="#" >
+                <img src="blkgrnresize2.png" alt ="logo"/>
+            </a>
+        <!--Main side Navigation Bar-->
+        </div>
+        <div class="navBar">
             <ul>
-                <li><center><a href="main.html"><center>Home</a></center></li>
-                <li><center><a href="Search.html"><center>Search</a></center></li>
-                <li><center><a href="Library.html"><center>Library</a></center></li>
-                <li><center><a href="Profile.html"><center>Profile</a></center></li>
-				<li><center><a href="About.html"><center>About us</a></center></li>
+                <li> <!--Home Button-->
+                    <a href="Home.html">
+                        <span class="fa fa-home"></span>
+                        <span>Home</span>
+                    </a>
+                </li>
+
+                <li><!--Search Button-->
+                    <a href="Search.html">
+                        <span class="fa fa-search"></span>
+                        <span>Search</span>
+                    </a>
+                </li>
+
+                <li><!--Your Library Button-->
+                    <a href="Library.html">
+                        <span class="fa fa-book"></span>
+                        <span>Your Library</span>
+                    </a>
+                </li>
             </ul>
-        </nav>
-        <main>
-            <!-- Your main content goes here -->
-			<!--<div class="search-bar">
-			<input type="text" placeholder="Search...">
-			<button>Search</button>
-        </main>
+        </div>
+
+
+        <div class="navBar">
+            <ul>
+                <li><!--Playlist Button-->
+                    <a href="Playlist.html">
+                        <span class="fa fa-play"></span>
+                        <span>Playlists</span>
+                    </a>
+                </li>
+
+                <li><!--Liked Songs Button-->
+                    <a href="Liked.html">
+                        <span class="fa fa-heart"></span>
+                        <span>Liked Songs</span>
+                    </a>
+                </li>
+
+             </ul>
+        </div>
+
+        <br>
+        <br>
+        <br>
+
+        <div class="about">
+            <ul>
+                <li><!--Playlist Button-->
+                    <a href="About.html">
+                        <span class=""></span>
+                        <span>About Us</span>
+                    </a>
+                </li>
+            </div>
+
+
     </div>
-	    <!-- 1st song and thumbnaill-->
+
+    <div class="container">
+        
+ <!-- 1st song and thumbnaill-->
     <div class="thumbnail" 
-         onmouseover="showPlayButton(this)" 
-         onmouseout="hidePlayButton(this)" 
-         onclick="playMusic(this.dataset.songUrl, this.dataset.songInfo, this.dataset.thumbnailUrl)" 
-         data-song-url="music2/Bad Bunny - Party.mp3"
-         data-song-info="Bad Bunny - Party"
-         data-thumbnail-url="thumbnail/sin_ti.png">
+        onmouseover="showPlayButton(this)" 
+        onmouseout="hidePlayButton(this)" 
+        onclick="playMusic(this.dataset.songUrl, this.dataset.songInfo, this.dataset.thumbnailUrl)" 
+        data-song-url="music2/Bad Bunny - Party.mp3"
+        data-song-info="Bad Bunny - Party"
+        data-thumbnail-url="thumbnail/sin_ti.png">
         <img src="thumbnail/sin_ti.png" alt="bad bunny - party">
         <div class="playButton" id="playButton1">
-		<img src="thumbnail/play.png" alt="Play"></div>
-        <div style="color:white" class="songInfo">Bad Bunny - Party</div>
+            <img src="thumbnail/play.png" alt="Play"></div>
+        <div class="songInfo">Bad Bunny - Party</div>
     </div>
 <!-- 2nd song and thumbnaill-->
-	<div class="thumbnail" 
-         onmouseover="showPlayButton(this)" 
-         onmouseout="hidePlayButton(this)" 
-         onclick="playMusic(this.dataset.songUrl, this.dataset.songInfo, this.dataset.thumbnailUrl)" 
-         data-song-url="music2/Drake - In My Feelings.mp3"
-         data-song-info="Drake - In My Feelings"
-         data-thumbnail-url="thumbnail/Her_Loss.png">
+    <div class="thumbnail" 
+        onmouseover="showPlayButton(this)" 
+        onmouseout="hidePlayButton(this)" 
+        onclick="playMusic(this.dataset.songUrl, this.dataset.songInfo, this.dataset.thumbnailUrl)" 
+        data-song-url="music2/Drake - In My Feelings.mp3"
+        data-song-info="Drake - In My Feelings"
+        data-thumbnail-url="thumbnail/Her_Loss.png">
         <img src="thumbnail/Her_Loss.png" alt="Drake - In My Feelings">
         <div class="playButton" id="playButton2">
-		<img src="thumbnail/play.png" alt="Play"></div>
-        <div style="color:white" class="songInfo">Drake - In My Feelings</div>
+            <img src="thumbnail/play.png" alt="Play"></div>
+        <div class="songInfo">Drake - In My Feelings</div>
     </div>
 <!-- 3rd song and thumbnaill-->	
- 	<div class="thumbnail" 
-         onmouseover="showPlayButton(this)" 
-         onmouseout="hidePlayButton(this)" 
-         onclick="playMusic(this.dataset.songUrl, this.dataset.songInfo, this.dataset.thumbnailUrl)" 
-         data-song-url="music2/Darude - Sandstorm.mp3"
-         data-song-info="Darude - Sandstorm"
-         data-thumbnail-url="thumbnail/Sandstorm_single.jpg">
-        <img src="thumbnail/Sandstorm_single.jpg" alt="Darude - Sandstorm">
-        <div class="playButton" id="playButton3">
-		<img src="thumbnail/play.png" alt="Play"></div>
-        <div style="color:white" class="songInfo">Darude - Sandstorm</div>
-    </div>
+<div class="thumbnail" 
+onmouseover="showPlayButton(this)" 
+onmouseout="hidePlayButton(this)" 
+onclick="playMusic(this.dataset.songUrl, this.dataset.songInfo, this.dataset.thumbnailUrl)" 
+data-song-url="music2/Darude - Sandstorm.mp3"
+data-song-info="Darude - Sandstorm"
+data-thumbnail-url="thumbnail/Sandstorm_single.jpg">
+<img src="thumbnail/Sandstorm_single.jpg" alt="Darude - Sandstorm">
+<div class="playButton" id="playButton3">
+<img src="thumbnail/play.png" alt="Play"></div>
+<div class="songInfo">Darude - Sandstorm</div>
+</div>
 <!-- 4th song and thumbnaill-->	
- 	<div class="thumbnail" 
-         onmouseover="showPlayButton(this)" 
-         onmouseout="hidePlayButton(this)" 
-         onclick="playMusic(this.dataset.songUrl, this.dataset.songInfo, this.dataset.thumbnailUrl)" 
-         data-song-url="music2/Nirvana - Smells Like Teen Spirit.mp3"
-         data-song-info="Nirvana - Smells Like Teen Spirit"
-         data-thumbnail-url="thumbnail/Nirvana.png">
-        <img src="thumbnail/Nirvana.png" alt="Nirvana - Smells Like Teen Spirit">
-        <div class="playButton" id="playButton4">
-		<img src="thumbnail/play.png" alt="Play"></div>
-        <div style="color:white" class="songInfo">Nirvana - Smells Like Teen Spirit</div>
-    </div>
- <!-- 5th song and thumbnaill-->	
- 	<div class="thumbnail" 
-         onmouseover="showPlayButton(this)" 
-         onmouseout="hidePlayButton(this)" 
-         onclick="playMusic(this.dataset.songUrl, this.dataset.songInfo, this.dataset.thumbnailUrl)" 
-         data-song-url="music2/Deadmau5 - Strobe (Radio Edit).mp3"
-         data-song-info="Deadmau5 - Strobe (Radio Edit)"
-         data-thumbnail-url="thumbnail/deadmau5.png">
-        <img src="thumbnail/deadmau5.png" alt="Deadmau5 - Strobe (Radio Edit)">
-        <div class="playButton" id="playButton5">
-		<img src="thumbnail/play.png" alt="Play"></div>
-        <div style="color:white" class="songInfo">Deadmau5 - Strobe (Radio Edit)</div>
-    </div>
- 
+<div class="thumbnail" 
+onmouseover="showPlayButton(this)" 
+onmouseout="hidePlayButton(this)" 
+onclick="playMusic(this.dataset.songUrl, this.dataset.songInfo, this.dataset.thumbnailUrl)" 
+data-song-url="music2/Nirvana - Smells Like Teen Spirit.mp3"
+data-song-info="Nirvana - Smells Like Teen Spirit"
+data-thumbnail-url="thumbnail/Nirvana.png">
+<img src="thumbnail/Nirvana.png" alt="Nirvana - Smells Like Teen Spirit">
+<div class="playButton" id="playButton4">
+<img src="thumbnail/play.png" alt="Play"></div>
+<div class="songInfo">Nirvana - Smells Like Teen Spirit</div>
+</div>
+<!-- 5th song and thumbnaill-->	
+<div class="thumbnail" 
+onmouseover="showPlayButton(this)" 
+onmouseout="hidePlayButton(this)" 
+onclick="playMusic(this.dataset.songUrl, this.dataset.songInfo, this.dataset.thumbnailUrl)" 
+data-song-url="music2/Deadmau5 - Strobe (Radio Edit).mp3"
+data-song-info="Deadmau5 - Strobe (Radio Edit)"
+data-thumbnail-url="thumbnail/deadmau5.png">
+<img src="thumbnail/deadmau5.png" alt="Deadmau5 - Strobe (Radio Edit)">
+<div class="playButton" id="playButton5">
+<img src="thumbnail/play.png" alt="Play"></div>
+<div class="songInfo">Deadmau5 - Strobe (Radio Edit)</div>
+</div>
 
-    <!-- Music Player -->
-    <div id="playerWindow">
-        <audio controls id="audioPlayer">
-            <!-- Audio function used by script to play song -->
-        </audio>
-        <div id="playerDetails">
-            <img id="playerThumbnail" src="" alt="Thumbnail">
-            <div id="playerSongInfo"></div>
-        </div>
-    </div>
 
-    <script src="scripts.js"></script>
+<!-- Music Player -->
+<div id="playerWindow">
+<audio controls id="audioPlayer">
+   <!-- Audio function used by script to play song -->
+</audio>
+<div id="playerDetails">
+   <img id="playerThumbnail" src="" alt="Thumbnail">
+   <div id="playerSongInfo"></div>
+</div>
+</div>
+
+<script src="scripts.js"></script>
+  
+   
+</div>
+   
 </body>
 </html>
