--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
 
         <div class="about">
             <ul>
-                <li><!--Playlist Button-->
+                <li><!--About Us Button-->
                     <a href="About.html">
                         <span class=""></span>
                         <span>About Us</span>
