--- a/Search.html
+++ b/Search.html
@@ -9,20 +9,78 @@
 	
 </head>
 				
+<script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <body>
-	
-		<div class="container">
-        <nav class="side-navigation">
-		
-		<!--Logo top right-->
-            <div class="logo"><center><img src="blkgrnresize2.png" class="ribbon" alt="" /></center></div>
-			<!--links-->
+    <!--Side Bar-->
+    <div class= "sidebar">
+        <div class = "logo"> <!--kiki Logo-->
+            <a href="#" >
+                <img src="blkgrnresize2.png" alt ="logo"/>
+            </a>
+        <!--Main side Navigation Bar-->
+        </div>
+        <div class="navBar">
             <ul>
-                <li><center><a href="main.html"><center>Home</a></center></li>
-                <li><center><a href="Search.html"><center>Search</a></center></li>
-                <li><center><a href="Library.html"><center>Library</a></center></li>
-                <li><center><a href="Profile.html"><center>Profile</a></center></li>
-				<li><center><a href="About.html"><center>About us</a></center></li>
+                <li> <!--Home Button-->
+                    <a href="Home.html">
+                        <span class="fa fa-home"></span>
+                        <span>Home</span>
+                    </a>
+                </li>
+
+                <li><!--Search Button-->
+                    <a href="Search.html">
+                        <span class="fa fa-search"></span>
+                        <span>Search</span>
+                    </a>
+                </li>
+
+                <li><!--Your Library Button-->
+                    <a href="Library.html">
+                        <span class="fa fa-book"></span>
+                        <span>Your Library</span>
+                    </a>
+                </li>
             </ul>
-        </nav>
+        </div>
+
+
+        <div class="navBar">
+            <ul>
+                <li><!--Playlist Button-->
+                    <a href="Playlist.html">
+                        <span class="fa fa-play"></span>
+                        <span>Playlists</span>
+                    </a>
+                </li>
+
+                <li><!--Liked Songs Button-->
+                    <a href="Liked.html">
+                        <span class="fa fa-heart"></span>
+                        <span>Liked Songs</span>
+                    </a>
+                </li>
+
+             </ul>
+        </div>
+
+        <br>
+        <br>
+        <br>
+
+        <div class="about">
+            <ul>
+                <li><!--About Us Button-->
+                    <a href="About.html">
+                        <span class=""></span>
+                        <span>About Us</span>
+                    </a>
+                </li>
+            </div>
+
+
+    </div>
+
         <main>
