--- a/About.html
+++ b/About.html
@@ -24,7 +24,7 @@
         <div class="navBar">
             <ul>
                 <li> <!--Home Button-->
-                    <a href="Home.html">
+                    <a href="main.html">
                         <span class="fa fa-home"></span>
                         <span>Home</span>
                     </a>
