--- a/About.html
+++ b/About.html
@@ -83,7 +83,7 @@
 
     </div>
 
-        <main>
+        <div class="container">
             <section class="about-us">
                 <h1 style="color:white">About Us</h1>
                 <p style="color:white">Welcome to kiki - your go to place for discovering and enjoying the best music! We are passionate  <br>
@@ -99,7 +99,7 @@
                 musical journey. Join us as we redefine the way you experience and enjoy the magic of music!  <br>
                 </p>
             </section>
-        </main>
+	</div>
     </div>
 </body>
 
