--- a/Playlist.html
+++ b/Playlist.html
@@ -168,6 +168,7 @@
 
     </div>
 
+<div class="container">
   <h1>Playlists:</h1>
   <div class="playlist">
     <a href="playlist1.html">Playlist 1</a>
@@ -175,3 +176,4 @@
   <div class="playlist">
     <a href="playlist2.html">Playlist 2</a>
   </div>
+ </div>
