--- a/Playlist.html
+++ b/Playlist.html
@@ -81,26 +81,31 @@
             </div>
 
 
-    <div class="container-playlist">
-        <h1 class="playlist-header">Playlists:</h1>
-        <br>
-        <!-- Playlist 1 -->
-        <div class="playlist">
-            <a href="playlist1.html">
-                <div class="playlist-box">
-                    <img src="playlistImg1.webp" alt="Playlist 1 Image">
-                    <p class="p-playlist">Playlist 1</p>
-                </div>
-            </a>
-        </div>
-        <br>
-        <!-- Playlist 2 -->
-        <div class="playlist">
-            <a href="playlist2.html">
-                <div class="playlist-box">
-                    <img src="https://i.pinimg.com/originals/11/17/57/111757ad3dc8123c12f263ecc003b009.jpg" alt="Playlist 2 Image">
-                    <p class="p-playlist">Playlist 2</p>
-                </div>
-            </a>
-        </div>
  </div>
+
+ <div class="container">
+ <div class="container-playlist">
+    <h1 class="playlist-header">Playlists:</h1>
+    <br>
+    <!-- Playlist 1 -->
+    <div class="playlist">
+        <a href="playlist1.html">
+            <div class="playlist-box">
+                <img src="playlistImg1.webp" alt="Playlist 1 Image">
+                <p class="p-playlist">Playlist 1</p>
+            </div>
+        </a>
+    </div>
+    <br>
+    <!-- Playlist 2 -->
+    <div class="playlist">
+        <a href="playlist2.html">
+            <div class="playlist-box">
+                <img src="https://i.pinimg.com/originals/11/17/57/111757ad3dc8123c12f263ecc003b009.jpg" alt="Playlist 2 Image">
+                <p class="p-playlist">Playlist 2</p>
+            </div>
+        </a>
+    </div>
+ </div>
+ </div>
+</body>
