--- a/About.html
+++ b/About.html
@@ -84,22 +84,25 @@
     </div>
 
         <div class="container">
-            <section class="about-us">
-                <h1 style="color:white">About Us</h1>
-                <p style="color:white">Welcome to kiki - your go to place for discovering and enjoying the best music! We are passionate  <br>
-                about bringing you a diverse range of music genres and artists to cater to every mood and taste.  <br>
-                At kiki, we believe in the power of music to connect people and evoke emotions. Our mission is to  <br>
-                create a platform that not only provides an extensive music library but also fosters a vibrant community of music lovers.  <br>
-                Explore our website to find your favorite tracks, create personalized playlists, and connect with fellow music enthusiasts.  <br>
-                Whether you're a casual listener or a dedicated music connoisseur, kiki is here to enhance your music experience. 
-                <br><br><br>
-                Kiki was founded in the vibrant city of Houston, Texas, by a dynamic group of college students who shared a common vision  <br>
-                to revolutionize the music experience by making it more interactive and engaging. Driven by our passion for music, we strive  <br>
-                to create a platform that not only connects listeners with their favorite tunes but also offers an immersive and unforgettable  <br>
-                musical journey. Join us as we redefine the way you experience and enjoy the magic of music!  <br>
+            <div class="about-us">
+                <h1>About Us</h1><br>
+                <p>Welcome to kiki - your go to place for discovering and enjoying the best music! We are passionate about bringing you a diverse range of music genres and artists to cater to every mood and taste. At kiki, we believe in the power of music to connect people and evoke emotions. Our mission is to create a platform that not only provides an extensive music library but also fosters a vibrant community of music lovers.  <br>
+                Explore our website to find your favorite tracks, create personalized playlists, and connect with fellow music enthusiasts. Whether you're a casual listener or a dedicated music connoisseur, kiki is here to enhance your music experience. 
+                <br><br>
+                Kiki was founded in the vibrant city of Houston, Texas, by a dynamic group of college students who shared a common vision to revolutionize the music experience by making it more interactive and engaging. Driven by our passion for music, we strive to create a platform that not only connects listeners with their favorite tunes but also offers an immersive and unforgettable musical journey. Join us as we redefine the way you experience and enjoy the magic of music!  <br>
                 </p>
-            </section>
-	</div>
+
+                <h1>Meet the Team</h1>
+                <p style="text-align: center; padding-top: 10px; font-weight: bold;">
+                    <!--will add information from intro slide to here-->
+                    Marcia Pereira <br> <br>
+                    Luis Casas <br> <br>
+                    Nathan Spears <br><br>
+                    David Garza<br> <br>
+                    Lourdes Renteria <br>
+                </p>    
+            </div>
+	    </div>
     </div>
 </body>
 
