--- a/main.html
+++ b/main.html
@@ -97,6 +97,31 @@
         <div class="playButton" id="playButton1">
             <img src="thumbnail/play.png" alt="Play"></div>
         <div class="songInfo">Bad Bunny - Party</div>
+	    <title>Heart Toggle</title>
+        <style>
+            .heart {
+                font-size: 24px;
+                cursor: pointer;
+            }
+
+            .filled {
+                color: red;
+            }
+        </style>
+        </head>
+
+        <body>
+            <div class="heart" onclick="toggleHeart(this)">
+                <i id="heartIcon" class="fa fa-heart"></i>
+            </div>
+
+            <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+            <script>
+                function toggleHeart(heart) {
+                    const heartIcon = heart.querySelector('i.fa-heart');
+                    heartIcon.classList.toggle('filled');
+                }
+            </script>
     </div>
 <!-- 2nd song and thumbnaill-->
     <div class="thumbnail" 
@@ -110,6 +135,31 @@
         <div class="playButton" id="playButton2">
             <img src="thumbnail/play.png" alt="Play"></div>
         <div class="songInfo">Drake - In My Feelings</div>
+	    <title>Heart Toggle</title>
+        <style>
+            .heart {
+                font-size: 24px;
+                cursor: pointer;
+            }
+
+            .filled {
+                color: red;
+            }
+        </style>
+        </head>
+
+        <body>
+            <div class="heart" onclick="toggleHeart(this)">
+                <i id="heartIcon" class="fa fa-heart"></i>
+            </div>
+
+            <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+            <script>
+                function toggleHeart(heart) {
+                    const heartIcon = heart.querySelector('i.fa-heart');
+                    heartIcon.classList.toggle('filled');
+                }
+            </script>
     </div>
 <!-- 3rd song and thumbnaill-->	
     <div class="thumbnail" 
@@ -123,6 +173,31 @@
         <div class="playButton" id="playButton3">
             <img src="thumbnail/play.png" alt="Play"></div>
         <div class="songInfo">Darude - Sandstorm</div>
+	    <title>Heart Toggle</title>
+        <style>
+            .heart {
+                font-size: 24px;
+                cursor: pointer;
+            }
+
+            .filled {
+                color: red;
+            }
+        </style>
+        </head>
+
+        <body>
+            <div class="heart" onclick="toggleHeart(this)">
+                <i id="heartIcon" class="fa fa-heart"></i>
+            </div>
+
+            <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+            <script>
+                function toggleHeart(heart) {
+                    const heartIcon = heart.querySelector('i.fa-heart');
+                    heartIcon.classList.toggle('filled');
+                }
+            </script>
     </div>
 <!-- 4th song and thumbnaill-->	
     <div class="thumbnail" 
@@ -136,6 +211,31 @@
         <div class="playButton" id="playButton4">
             <img src="thumbnail/play.png" alt="Play"></div>
         <div class="songInfo">Nirvana - Smells Like Teen Spirit</div>
+	    <title>Heart Toggle</title>
+        <style>
+            .heart {
+                font-size: 24px;
+                cursor: pointer;
+            }
+
+            .filled {
+                color: red;
+            }
+        </style>
+        </head>
+
+        <body>
+            <div class="heart" onclick="toggleHeart(this)">
+                <i id="heartIcon" class="fa fa-heart"></i>
+            </div>
+
+            <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+            <script>
+                function toggleHeart(heart) {
+                    const heartIcon = heart.querySelector('i.fa-heart');
+                    heartIcon.classList.toggle('filled');
+                }
+            </script>
     </div>
 <!-- 5th song and thumbnaill-->	
     <div class="thumbnail" 
@@ -149,6 +249,31 @@
         <div class="playButton" id="playButton5">
             <img src="thumbnail/play.png" alt="Play"></div>
         <div class="songInfo">Deadmau5 - Strobe (Radio Edit)</div>
+	    <title>Heart Toggle</title>
+        <style>
+            .heart {
+                font-size: 24px;
+                cursor: pointer;
+            }
+
+            .filled {
+                color: red;
+            }
+        </style>
+        </head>
+
+        <body>
+            <div class="heart" onclick="toggleHeart(this)">
+                <i id="heartIcon" class="fa fa-heart"></i>
+            </div>
+
+            <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+            <script>
+                function toggleHeart(heart) {
+                    const heartIcon = heart.querySelector('i.fa-heart');
+                    heartIcon.classList.toggle('filled');
+                }
+            </script>
     </div>
 
 
