--- a/upload.html
+++ b/upload.html
@@ -37,7 +37,7 @@
                 </li>
 
                 <li><!--Your Library Button-->
-                    <a href="#">
+                    <a href="songs.html">
                         <span class="fa fa-book"></span>
                         <span>Your Library</span>
                     </a>
