--- a/Playlist.html
+++ b/Playlist.html
@@ -84,28 +84,31 @@
  </div>
 
  <div class="container">
- <div class="container-playlist">
-    <h1 class="playlist-header">Playlists:</h1>
-    <br>
-    <!-- Playlist 1 -->
-    <div class="playlist">
-        <a href="playlist1.html">
-            <div class="playlist-box">
-                <img src="playlistImg1.webp" alt="Playlist 1 Image">
-                <p class="p-playlist">Playlist 1</p>
-            </div>
-        </a>
+    <header class="header">
+        <h1 class="playlist-header">Playlists:</h1>
+        <button class="create-playlist-btn">Create Playlist</button>
+    </header>
+        <ul class="playlist-list">
+            <li class="playlist-item">
+                <a href="playlist1.html">
+                    <img src="playlistImg1.webp" alt="Playlist 1 Image">
+                    <p class="playlist-name">Playlist 1</p>
+                </a>
+            </li>
+            <li class="playlist2-item">
+                <a href="playlist2.html">
+                    <img src="https://i.pinimg.com/originals/11/17/57/111757ad3dc8123c12f263ecc003b009.jpg" alt="Playlist 2 Image">
+                    <p class="playlist-name">Playlist 2</p>
+                </a>
+            </li>
+        </ul>
     </div>
-    <br>
-    <!-- Playlist 2 -->
-    <div class="playlist">
-        <a href="playlist2.html">
-            <div class="playlist-box">
-                <img src="https://i.pinimg.com/originals/11/17/57/111757ad3dc8123c12f263ecc003b009.jpg" alt="Playlist 2 Image">
-                <p class="p-playlist">Playlist 2</p>
-            </div>
-        </a>
-    </div>
- </div>
- </div>
+</div>
 </body>
+<script>
+    // JavaScript for handling the "Create Playlist" button click
+    document.querySelector('.create-playlist-btn').addEventListener('click', function() {
+        // For demonstration purposes, showing an alert when the button is clicked
+        alert('Feature under development: You can create a playlist here.');
+    });
+</script>
