--- a/Liked.html
+++ b/Liked.html
@@ -42,7 +42,7 @@
 
                 <li>
                     <!--Your Library Button-->
-                    <a href="Library.html">
+                    <a href="songs.html">
                         <span class="fa fa-book"></span>
                         <span>Your Library</span>
                     </a>
