--- a/Profile.html
+++ b/Profile.html
@@ -38,7 +38,7 @@
                 </li>
 
                 <li><!--Your Library Button-->
-                    <a href="Library.html">
+                    <a href="songs.html">
                         <span class="fa fa-book"></span>
                         <span>Your Library</span>
                     </a>
