--- a/main.html
+++ b/main.html
@@ -82,9 +82,14 @@
 
 
     </div>
-
+<style>.welcome {
+    margin-top: 400px; /* You can adjust this value based on how much space you want below the header */
+    color: white;
+}</style>
     <div class="container">
-
+        <div class="welcome">
+            <h1><center>welcome back</center></h1>
+        </div>
  <!-- 1st song and thumbnaill-->
     <div class="thumbnail" 
         onmouseover="showPlayButton(this)" 
