--- a/Search.html
+++ b/Search.html
@@ -36,7 +36,7 @@
                     </a>
                 </li>
                 <li><!--Your Library Button-->
-                    <a href="Library.html">
+                    <a href="songs.html">
                         <span class="fa fa-book"></span>
                         <span>Your Library</span>
                     </a>
